Make wheel window actions work as expected with natural scrolling

Undo natural scrolling so wheel actions are applied as expected. For
example, the window becomes more opaque as you scroll the titlebar up.

wheelToMouseCommand() was adjusted so negative deltas (scrolling up)
map to the corresponding "up" commands.

BUG: 442789